# Vortigaunt

./: .gitattributes  CMakeLists.txt  MIT-LICENSE.txt  README.md
src/: Detail.h  Utility.h  Vortigaunt.h
test/basic/: Basic.cpp  Basic.h  CMakeLists.txt  Kernel.cu
